# 15418f23final

./: .gitignore  Diagram.dot  README.md
ajaxemu/: CMakeLists.txt  a.out  main.cpp
ajaxemu/classicsrc/: main.cpp
ajaxemu/src/: main.cu
fuzzer/: .clang-format  .clang-tidy  BuildNotes.txt  CMakeLists.txt
fuzzer/src/: main.cu
fuzzer/src/backends/: AVX512Backend.cpp  ClassicalBackend.cpp  README.md
fuzzer/src/include/backends/: AVX512Backend.h  AVX512Backend.hpp  AbstractMachineBackend.hpp  ClassicalBackend.h  ClassicalBackend.hpp  MachineBackend.h  MachineBackend.hpp
fuzzer/src/include/strategies/: AbstractFuzzingStrategy.hpp  SimpleFuzzingStrategies.hpp
subjects/: README.md  makebinfile.sh
subjects/basic/: test
subjects/bufferstuffer/: binfile  main.c
subjects/compare/: main.c  main.ln
subjects/conditional/: binfile  main.c  main.ln
subjects/eep-a-heap/: binfile  main.c  test  testdump.asm  testreadelf.txt
subjects/fnptr/: main.c  main.ln
subjects/justmain/: README.md  binfile  justtext.asm  main.c  test  testdump  testdump.asm
subjects/printing/: main.c  testobjdump.txt
